--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "0.10.30"
   },
   "dependencies": {
+    "dropbox": "^0.10.3",
     "express": "~4.8.2",
     "http": "0.0.0",
     "neon": "~2.0.0",
