--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "0.10.30"
   },
   "dependencies": {
-    "dropbox": "^0.10.3",
     "express": "~4.8.2",
+    "firebase": "^2.2.2",
     "http": "0.0.0",
     "neon": "~2.0.0",
     "socket.io-client": "^1.3.5",
