--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "~4.8.2",
     "fs-finder": "^1.8.0",
+    "hound": "^1.0.4",
     "http": "0.0.0",
     "minimist": "^1.1.1",
     "neon": "~2.0.0"
